Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.6.2, Qt Creator 4.8.1
-
Fix Version/s: Qt Creator 4.9.0-beta2
-
Component/s: Editors
-
Labels:None
-
Platform/s:
-
Commits:51e24f5ad4fda308f6d6875969318ccf7158bffa (qt-creator/qt-creator/4.9)
Description
From the UI of Tools > Options > Text Editor > Fonts & Colors, it is very unclear that a user must first copy a scheme before being able to change it.
If a scheme is not editable:
- Hide the controls for editing it
- Show the information "You need to copy the scheme to edit it." instead
- Make the label / "copy" a clickable link that triggers the copy action