TextEditor: Hide controls in scheme editor for builtin schemes

Show a label instead with a link that copies the current color scheme.

Fixes: QTCREATORBUG-21874
Change-Id: I74083bac8d7124341b4b63d8e172172235c5e184
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>